
	Avoid resource leakage on 'make clean' (see #75424).
	* configure.in (AC_CONFIG_FILES): Add runtime/semdel-wrapper.
	* runtime/semdel-wrapper.in: New.
	* runtime/Makefile.am (clean-local): Use the semdel program before
	nuking the .wapi directory.
	(noinst_SCRIPTS): Add semdel-wrapper.
	(MYDISTFILES, distdir): Use automake variable to get the list of
	files to distribute.

2005-06-27  Geoff Norton  <gnorton@customerdna.com>

	* configure.in: Add support for X86 darwin.

2005-06-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add support for ia64.

2005-06-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: enabled the use of mmap/munmap for solaris and linux.
	It seems to help with memory usage.

2005-06-15  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Another attempt at the portable "find libX11.so"
	Hopefully, this one has no code paths where we are worse off than
	what we had before any of this mess.
	
	* configure.in: What I hope is a more portable version hack.

2005-06-14  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: echo the version number to
	mcs/build/common/MonoVersion.cs. This allows us to not need to
	update AssemblyInfo.cs every time we bump the version number.

	* mono-uninstalled.pc.in: pc file that handles mono when it is not
	installed. This lets us have mkbundle work inside the tree.

	* configure.in: Create the .pc file above.

2005-06-13  Jonathan Pryor <jonpryor@vt.edu>

	* man/mono-shlib-cop.1: Add man page for mono-shlib-cop program.

2005-06-13  Jonathan Pryor <jonpryor@vt.edu>

	* data/config.in: Fix generated XML.

2005-06-13  Jonathan Pryor <jonpryor@vt.edu>

	* scripts/Makefile.am: Add mono-shlib-cop.

2005-06-09  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Handle more gracefully if objdump or X isn't
	there. Warn the user about possible breakage.

2005-06-08  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: read the SONAME from libX11. This is the same